# ParserDNS

./: pyproject.toml
app/core/: settings.py
app/infrastructure/repositories/: brand.py  category.py  item.py  shop.py
app/models/: base.py  brand.py  category.py  item.py  shop.py
app/parsing/: schemas.py
app/schemas/: base.py  brand.py  category.py  item.py  shop.py
