[project]
name = "parserdns"
version = "0.1.0"
description = ""
authors = [
    {name = "victoria",email = "pururpu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.138.0,<0.139.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
